<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_alignParentTop="true"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <View android:background="#ffffff"
                  android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:layout_weight="1"
                  android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvDateToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <View android:background="#ffffff"
                  android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:layout_weight="1"
                  android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_above="@id/messageBar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/messageBar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:elevation="8dp"
        android:background="?colorPrimaryDark">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/btnSend">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_a_message"
                android:inputType="textMultiLine"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_send"
            android:contentDescription="@string/send_button"/>

        <Button
            android:id="@+id/btnToday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/back_to_today"
            android:textSize="16sp"
            android:textColor="?colorAccent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_back"
            android:visibility="gone"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"/>


    </RelativeLayout>
</RelativeLayout>