<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/enter_your_passcode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="?colorPrimaryDark"
        android:elevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="1"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="2"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="3"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="4"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="5"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="6"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="7"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="8"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="9"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/ic_delete"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:textSize="40sp"
                android:textColor="?colorAccent"
                android:text="0"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
            <ImageButton
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/submit_button"
                android:src="@drawable/ic_submit"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:clickable="true"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>